cmake_minimum_required(VERSION 3.10)

project(net_api_test 
		VERSION  0.1.0)

set(CMAKE_CXX_FLAGS_DEBUG  "$ENV{CMAKE_CXX_FLAGS} -g -ggdb -O0 -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CMAKE_CXX_FLAGS} -O3 -W -DNDEBUG -lm")
set(TOP_DIR  ${CMAKE_CURRENT_SOURCE_DIR})

message(STATUS "VERSION: ${PROJECT_VERSION}")
math(EXPR PROJECT_VERSION_VALUE "((${PROJECT_VERSION_MAJOR} << 16) + (${PROJECT_VERSION_MINOR} << 8)) + ${PROJECT_VERSION_PATCH}")
# OUTPUT_FORMAT DECIMAL)
message(STATUS "PROJECT_VERSION_VALUE: ${PROJECT_VERSION_VALUE}")
string(TIMESTAMP PROJECT_COMPILE_TIME %Y%m%d%H%M%S)
message(STATUS "COMPILE_TIME: ${PROJECT_COMPILE_TIME}")

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	message(STATUS "INSTALL_SYS_DEFAULT_DIR: 1 ${CMAKE_INSTALL_PREFIX}")	
	set(CMAKE_INSTALL_PREFIX ${TOP_DIR}/install CACHE PATH "default install prefix" FORCE)
endif()

message(STATUS "INSTALL_DIR: ${CMAKE_INSTALL_PREFIX}")

message(STATUS "TOP_DIR: ${TOP_DIR}")

set(CMAKE_DEBUG_POSTFIX "_d")

add_subdirectory(core)
add_subdirectory(example)
add_subdirectory(test)
add_subdirectory(third_party)
add_subdirectory(demo)
