cmake_minimum_required(VERSION 3.10)

set(TARGET_NAME test_net_api)


file(GLOB ${TARGET_NAME}_HEADER_FILES 
	LIST_DIRECTORIES  FALSE  CONFIGURE_DEPENDS
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h*"
	)
file(GLOB ${TARGET_NAME}_SOURCE_FILES
	LIST_DIRECTORIES FALSE CONFIGURE_DEPENDS 
	"${CMAKE_CURRENT_SOURCE_DIR}/*.c*")

add_library(${TARGET_NAME} 
	SHARED
	${${TARGET_NAME}_HEADER_FILES}
	${${TARGET_NAME}_SOURCE_FILES}
	)
target_link_libraries(${TARGET_NAME} PRIVATE  core)
